--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^6.6.0",
     "eth-json-rpc-filters": "^4.1.1",
+    "fixed-merkle-tree": "^0.3.1",
     "ganache-cli": "^6.7.0",
     "snarkjs": "git+https://github.com/tornadocash/snarkjs.git#869181cfaf7526fe8972073d31655493a04326d5",
     "truffle": "^5.0.44",
